[package]
name = "utun"
version = "0.1.0"
edition = "2021"
authors = ["UTun Contributors"]
description = "Quantum-safe tunnel system"
license = "AGPL-3.0-only"

[dependencies]
# Post-quantum cryptography
pqcrypto-kyber = "0.8"
pqcrypto-classicmceliece = "0.2"
pqcrypto-traits = "0.3"

# Symmetric cryptography
aes-gcm = "0.10"
aead = "0.5"

# Security
zeroize = { version = "1.7", features = ["derive"] }
ring = "0.17"

# Key derivation
hkdf = "0.12"
sha2 = "0.10"

# TLS
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.25"

# Certificate generation
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
x509-parser = { version = "0.16", features = ["verify"] }
x509-cert = { version = "0.2", features = ["pem", "builder"] }
pem-rfc7468 = { version = "0.7", features = ["std"] }
const-oid = "0.9"
der = "0.7"
spki = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"
bytes = "1.5"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# LRU cache for nonce tracking
lru = "0.12"

# Utilities
rand = "0.8"
chrono = "0.4"
ipnetwork = "0.21"
socket2 = "0.5"

# Metrics
prometheus = "0.14"
warp = "0.3"

# Runtime info
rustc_version_runtime = "0.3"

# Async runtime
tokio = { version = "1", features = ["sync", "time", "rt", "rt-multi-thread", "macros", "net", "io-util", "io-std"] }

# HTTP client for health checks
reqwest = { version = "0.11", features = ["json"] }

# Windows ACL checking
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Security", "Win32_Security_Authorization", "Win32_Foundation", "Win32_System_Memory"] }

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
tempfile = "3.10"

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "latency_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
